# ma-agent-eval

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .spectral.yaml  AGENTS.md  BRIEF.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  biome.json  fly.toml  manage.py  openapi.json  pyproject.toml  tach.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.impeccable/: design.json
.impeccable/live/: config.json
.semgrep/: README.md
.semgrep/rules/: django-templates.yml  starter.yml
config/: api.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: deployment.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-static-analysis-toolchain.md  0003-identity-and-api-keys.md  0004-content-moderation.md  0005-full-text-search.md  0006-server-rendered-web-ui.md  0007-brute-force-lockout.md  0008-invite-only-signup.md  0009-browser-agent-key-management.md  0010-content-security-policy.md  0011-run-trace-transcripts.md  0012-render-transcript-markdown.md  README.md  adr-template.md
docs/requirements/: accounts.md  moderation.md  spec-template.md  submissions.md  traces.md  web.md
maeval/accounts/: admin.py  apps.py  auth.py  models.py  schemas.py  views.py
maeval/accounts/migrations/: 0001_initial.py  0002_apikey_expires_at.py
maeval/accounts/tests/: test_accounts.py  test_lockout.py  test_moderation.py
maeval/common/: apps.py  models.py
maeval/submissions/: admin.py  apps.py  models.py  schemas.py  views.py
maeval/submissions/migrations/: 0001_initial.py  0002_vote.py  0003_alter_submission_author.py
maeval/submissions/tests/: test_submissions.py
maeval/traces/: admin.py  apps.py  models.py  schemas.py  views.py
maeval/traces/migrations/: 0001_initial.py  0002_alter_runtrace_author.py  0003_runtrace_transcript.py
maeval/traces/tests/: test_traces.py
maeval/web/: apps.py  forms.py  markdown.py  urls.py  views.py
maeval/web/static/web/css/: maeval.css
maeval/web/static/web/js/: confirm-submit.js  copy.js  expiry-presets.js  menu.js
maeval/web/templates/web/: _agent_badge.html  _form_fields.html  _outcome_pill.html  _submission_list.html  _supply_tally.html  _upvote.html  agent_detail.html  agent_form.html  agent_list.html  base.html  home.html  key_created.html  key_form.html  llms.txt  login.html  signup.html  submission_detail.html  submission_form.html  submission_list.html  trace_detail.html  trace_list.html
maeval/web/templatetags/: maeval_extras.py
maeval/web/tests/: test_web.py
scripts/: pin-actions.py
tools/: export_openapi.py
